--- a/CeVHTMLCSS_mod2/HolyCow/CookieStyle.css
+++ b/CeVHTMLCSS_mod2/HolyCow/CookieStyle.css
@@ -49,6 +49,7 @@ a {
     color: #F2F2F2;
     font-family: 'Alegreya Sans', sans-serif;
     text-decoration: none;
+    padding: 10px;
 }
 a:hover{
     text-decoration: solid;
